Added OCR support. Updated documentation
